syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "office_messages.proto";

option go_package = "./;pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
	info: {
		title: "Office API";
		version: "0.0.1";
	};
  security_definitions: {
    security: {
      key: "bearer"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "Authorization"
        description: "Authentication token, prefixed by Bearer: Bearer <token>"
      }
    }
  };
  security: {
    security_requirement: {
      key: "bearer"
    }
  };
};

service OfficeService{
  rpc CreateOffice (CreateOfficeRequest) returns (CreateOfficeResponse) {
    option (google.api.http) = {
      post: "/offices"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to create a new office";
      summary: "Create a new office";
    };
  };
  rpc UpdateOfficeById (UpdateOfficeByIdRequest) returns (UpdateOfficeByIdResponse) {
    option (google.api.http) = {
      patch: "/offices/{id}"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to update office by id";
      summary: "Update office by id";
    };
  };
  rpc DeleteOfficeById (DeleteOfficeByIdRequest) returns (DeleteOfficeByIdResponse) {
    option (google.api.http) = {
      delete: "/offices/{id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to delete office by id";
      summary: "Delete office by id";
    };
  };

  rpc FindOffices (FindOfficesRequest)returns (FindOfficesResponse){
    option (google.api.http) = {
			get: "/offices"
		};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to find offices";
      summary: "Find Offices";
    };
  }
  rpc FindOfficeById (FindOfficeByIdRequest) returns (FindOfficeByIdResponse) {
    option (google.api.http) = {
			get: "/offices/{id}"
		};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to find office by id";
      summary: "Find Office By Id";
    };
  };
}